<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item
        android:id="@+id/resetFilter"
        android:title="@string/resetFilters"
        app:showAsAction="never" />

    <item
        android:id="@+id/hairRemovalFilter"
        android:title="@string/hairRemovalFilter"
        app:showAsAction="never" />

    <item
        android:id="@+id/detectWhite"
        android:title="@string/detectWhite"
        app:showAsAction="never" />

    <item
        android:id="@+id/detectRed"
        android:title="@string/detectRed"
        app:showAsAction="never" />
    <item
        android:id="@+id/detectLightBrown"
        android:title="@string/detectLightBrown"
        app:showAsAction="never" />
    <item
        android:id="@+id/detectDarkBrown"
        android:title="@string/detectDarkBrown"
        app:showAsAction="never" />
    <item
        android:id="@+id/detectBlueGray"
        android:title="@string/detectBlueGray"
        app:showAsAction="never" />
    <item
        android:id="@+id/detectBlack"
        android:title="@string/detectBlack"
        app:showAsAction="never" />
    <item
        android:id="@+id/tumor_detection"
        android:title="@string/tumorDetection"
        app:showAsAction="never" />
    <item
        android:id="@+id/detectAssymetry"
        android:title="@string/detectAssymetry"
        app:showAsAction="never" />
</menu>